--- a/history.html
+++ b/history.html
@@ -55,7 +55,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="home.html"><img class="img-fluid" src="#" width="200" alt="Image of DemaJobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="#" width="200" alt="Image of DemaJobs Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -78,7 +78,7 @@
           <!--Breadcrumb Command -->
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="home.html">Home</a></li>
+              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">History</li>
             </ol>
           </nav>
