--- a/history.html
+++ b/history.html
@@ -44,7 +44,7 @@
               <ul class="list-unstyled">
                 <li class="nav-item"><h5><a class="nav-link" href="#">Home</a></h5></li>
                 <li class="nav-item active"><h5><a class="nav-link" href="history.html">History<span class="sr-only">(current)</span></a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">Mission</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#">About Us</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#">The Team</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#">Divisions</a></h5></li>
               </ul>
@@ -138,7 +138,7 @@
               <h5 class="my-3">Featured Links</h5>
               <p><a href="history.html">History</a></p>
               <p><a href="#">Plan of Operations</a></p>
-              <p><a href="#">Mission</a></p>
+              <p><a href="#">About Us</a></p>
               <p><a href="#">Gallery</a></p>
             </div>
             <!-- Social Media Links -->
