--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <ul class="list-unstyled">
                 <li class="nav-item active"><h5><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="history.html">History</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">Mission</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#">About Us</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#">The Team</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#">Divisions</a></h5></li>
               </ul>
@@ -98,21 +98,21 @@
           <div class="row">
             <div class="col-md-4 py-2" id="PrayerCity">
               <div class="card">
-                <a href="#">
+                <a href="#!">
                   <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
                 </a>
               </div>
             </div>
             <div class="col-md-4 py-2" id="ReformationCity">
               <div class="card">
-                <a href="#">
+                <a href="#!">
                   <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
                 </a>
               </div>
             </div>
             <div class="col-md-4 py-2" id="AgedCity">
               <div class="card">
-                <a href="#">
+                <a href="#!">
                   <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
                 </a>
               </div>
@@ -145,7 +145,7 @@
                   <img class="img-fluid rounded-sm" src="resources/images/update.jpg" alt="1st Update">
                 </div>
                 <div class="col-md-6">
-                  <h5><a href="#">DemaJobs Launching</a></h5>
+                  <h5><a href="#!">DemaJobs Launching</a></h5>
                   <p class="text-muted">
                     <i class="fas fa-calendar-day"></i> Sunday,....
                   </p>
@@ -198,7 +198,7 @@
               <h5 class="my-3">Featured Links</h5>
               <p><a href="history.html">History</a></p>
               <p><a href="#">Plan of Operations</a></p>
-              <p><a href="#">Mission</a></p>
+              <p><a href="#">About Us</a></p>
               <p><a href="#">Gallery</a></p>
             </div>
             <!-- Social Media Links -->
