--- a/index.html
+++ b/index.html
@@ -70,16 +70,20 @@
               <li data-target="#carouselCaptions" data-slide-to="1" class="active"></li>
               <li data-target="#carouselCaptions" data-slide-to="2"></li>
               <li data-target="#carouselCaptions" data-slide-to="3"></li>
+              <li data-target="#carouselCaptions" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                <img class="img-fluid" alt="1" src="#">
+                <img class="img-fluid" alt="1" src="resources/images/slide1.png">
               </div>
               <div class="carousel-item">
-                <img class="img-fluid" alt="2" src="#">
+                <img class="img-fluid" alt="2" src="resources/images/slide2.png">
               </div>
               <div class="carousel-item">
-                <img class="img-fluid" alt="3" src="#">
+                <img class="img-fluid" alt="3" src="resources/images/slide3.png">
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" alt="3" src="resources/images/slide4.png">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselCaptions" role="button" data-slide="prev">
