--- a/history.html
+++ b/history.html
@@ -42,11 +42,11 @@
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
               <ul class="list-unstyled">
-                <li class="nav-item"><h5><a class="nav-link" href="#">Home</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="index.html">Home</a></h5></li>
                 <li class="nav-item active"><h5><a class="nav-link" href="history.html">History<span class="sr-only">(current)</span></a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">About Us</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">The Team</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">Divisions</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#!">About Us</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#!">The Team</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#!">Divisions</a></h5></li>
               </ul>
             </div>
           </div>
