--- a/history.html
+++ b/history.html
@@ -6,11 +6,11 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of DemaJobs City">
+    <meta name="description" content="Official Website of Demajobs City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>History of DemaJobs City</title>
+    <title>History of Demajobs City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -35,9 +35,9 @@
             <div class="navHide col-sm-8 col-md-7 py-3">
               <h5>History</h5>
               <p class="text-muted">
-                History Extract...
+                The initial work of the Demajobs City started in the year 2007
               </p>
-              <img class="img-fluid" src="#" alt="Image of DemaJobs Logo">
+              <img class="img-fluid" src="#" alt="Image of Demajobs Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -55,7 +55,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="#" width="200" alt="Image of DemaJobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="#" width="200" alt="Image of Demajobs Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -85,7 +85,7 @@
           <!-- Heading -->
           <div class="heading py-3">
             <h1>The History</h1>
-            <p class="text-muted"><i class="fas fa-history"></i> Brief History of DemaJobs City</p>
+            <p class="text-muted"><i class="fas fa-history"></i> Brief History of Demajobs City</p>
           </div>
           <!-- Brief History -->
           <div class="brief pb-5">
@@ -126,7 +126,7 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#" target="_blank">DemaJobs City</a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#" target="_blank">Demajobs City</a></p>
               <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#" target="_blank">....</a> </p>
               <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="#" target="_blank">Digital Address: </a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box .</p>
@@ -152,7 +152,7 @@
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
-            <p>&copy; 2023 Official Website of DemaJobs City. All rights reserved</p>
+            <p>&copy; 2023 Official Website of Demajobs City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
         </div>
