--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of DemaJobs City">
+    <meta name="description" content="Official Website of Demajobs City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>DemaJobs City</title>
+    <title>Demajobs City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -35,9 +35,11 @@
             <div class="navHide col-sm-8 col-md-7 py-3">
               <h5>Welcome</h5>
               <p class="text-muted">
-                Welcome Message...
+                Demajobs City’s main objective is to know Christ Jesus and make Him known to all.
+                All the activities of the city will be directed at building a strong platform for
+                Christians to deepen their experience of Christ Jesus. 
               </p>
-              <img class="img-fluid" src="#" alt="Image of DemaJobs Logo">
+              <img class="img-fluid" src="#" alt="Image of Demajobs Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -55,7 +57,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="#" width="200" alt="Image of DemaJobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="#" width="200" alt="Image of Demajobs Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -128,7 +130,7 @@
         <div class="jumbotron">
           <div class="row">
             <div class="col-md-7 pb-4">
-              <p class="font-weight-bold display-3">DemaJobs City</p>
+              <p class="font-weight-bold display-3">Demajobs City</p>
               <h3 class="lead">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-4"><a href="#!"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
             </div>
@@ -149,7 +151,7 @@
                   <img class="img-fluid rounded-sm" src="resources/images/update.jpg" alt="1st Update">
                 </div>
                 <div class="col-md-6">
-                  <h5><a href="#!">DemaJobs Launching</a></h5>
+                  <h5><a href="#!">Demajobs Launching</a></h5>
                   <p class="text-muted">
                     <i class="fas fa-calendar-day"></i> Sunday,....
                   </p>
@@ -190,7 +192,7 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#" target="_blank">DemaJobs City</a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#" target="_blank">Demajobs City</a></p>
               <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#" target="_blank">....</a> </p>
               <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="#" target="_blank">Digital Address: </a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box .</p>
@@ -216,7 +218,7 @@
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
-            <p>&copy; 2023 Official Website of DemaJobs City. All rights reserved</p>
+            <p>&copy; 2023 Official Website of Demajobs City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
         </div>
