--- a/history.html
+++ b/history.html
@@ -126,28 +126,27 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#" target="_blank">Demajobs City</a></p>
-              <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#" target="_blank">....</a> </p>
-              <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="#" target="_blank">Digital Address: </a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Demajobs City</a></p>
+              <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p>
+              <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="#!" target="_blank">Digital Address: </a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box .</p>
               <p><i class="fas fa-phone-volume fa-lg pr-3"></i> </p>
-              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="#" target="_blank"></a></p>
+              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="#!" target="_blank"></a></p>
             </div>
             <!-- Featured Links -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Featured Links</h5>
               <p><a href="history.html">History</a></p>
-              <p><a href="#">Plan of Operations</a></p>
-              <p><a href="#">About Us</a></p>
-              <p><a href="#">Gallery</a></p>
+              <p><a href="#!">About Us</a></p>
+              <p><a href="#!">Gallery</a></p>
             </div>
             <!-- Social Media Links -->
             <div class="social col-md-4">
               <h5 class="my-3">Stay in touch</h5>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
           </div>
           <!-- Copyright -->
