--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
               <ul class="list-unstyled">
                 <li class="nav-item active"><h5><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="history.html">History</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">About Us</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">The Team</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#">Divisions</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#!">About Us</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#!">The Team</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="#!">Divisions</a></h5></li>
               </ul>
             </div>
           </div>
@@ -144,7 +144,7 @@
           <div class="row">
             <div class="col-md-6 my-4 event">
               <div class="titles" id="updates">
-                <h4><a href="index.html#programmes">City Updates</a></h4>
+                <h4><a href="#!">City Updates</a></h4>
               </div>
               <div class="d-flex align-items-start py-4 border-bottom" id="p4">
                 <div class="col-md-6">
@@ -162,7 +162,7 @@
             </div>
             <div class="col-md-6 my-4">
               <div class="titles" id="meeting">
-                <h4><a href="index.html#meeting">City Info</a></h4>
+                <h4><a href="#!">City Info</a></h4>
               </div>
               <div class="list-group">
                 <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -192,28 +192,27 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#" target="_blank">Demajobs City</a></p>
-              <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#" target="_blank">....</a> </p>
-              <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="#" target="_blank">Digital Address: </a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Demajobs City</a></p>
+              <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p>
+              <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="#!" target="_blank">Digital Address: </a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box .</p>
               <p><i class="fas fa-phone-volume fa-lg pr-3"></i> </p>
-              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="#" target="_blank"></a></p>
+              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="#!" target="_blank"></a></p>
             </div>
             <!-- Featured Links -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Featured Links</h5>
               <p><a href="history.html">History</a></p>
-              <p><a href="#">Plan of Operations</a></p>
-              <p><a href="#">About Us</a></p>
-              <p><a href="#">Gallery</a></p>
+              <p><a href="#!">About Us</a></p>
+              <p><a href="#!">Gallery</a></p>
             </div>
             <!-- Social Media Links -->
             <div class="social col-md-4">
               <h5 class="my-3">Stay in touch</h5>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
-              <a class="pr-4" href="#" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+              <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
           </div>
           <!-- Copyright -->
