--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
               <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Demajobs City</a></p>
-              <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p>
-              <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="#!" target="_blank">Digital Address: </a></p>
-              <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box .</p>
-              <p><i class="fas fa-phone-volume fa-lg pr-3"></i> </p>
+              <!-- <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p> -->
+              <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="https://www.ghanapostgps.com/map/#CA60572298" target="_blank">Digital Address: CA-6057-2298</a></p>
+              <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box KF 883, Koforidua</p>
+              <p><i class="fas fa-phone-volume fa-lg pr-3"></i> 0557327541</p>
               <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="#!" target="_blank"></a></p>
             </div>
             <!-- Featured Links -->
