--- a/history.html
+++ b/history.html
@@ -37,7 +37,7 @@
               <p class="text-muted">
                 The initial work of the Demajobs City started in the year 2007
               </p>
-              <img class="img-fluid" src="#" alt="Image of Demajobs Logo">
+              <img class="img-fluid" src="resources/images/logo.jpeg" alt="Image of Demajobs Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -55,7 +55,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="#" width="200" alt="Image of Demajobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.jpeg" width="200" alt="Image of Demajobs Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
