--- a/history.html
+++ b/history.html
@@ -131,7 +131,7 @@
               <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="https://www.ghanapostgps.com/map/#CA60572298" target="_blank">Digital Address: CA-6057-2298</a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box KF 883, Koforidua</p>
               <p><i class="fas fa-phone-volume fa-lg pr-3"></i> 0557327541</p>
-              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:demajobscity@gmail.com" target="_blank"></a></p>
+              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:demajobscity@gmail.com" target="_blank">demajobscity@gmail.com</a></p>
             </div>
             <!-- Featured Links -->
             <div class="col-md-4 mb-5">
