--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>History of Demajobs City</title>
+    <title>Demajobs City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -33,18 +33,20 @@
           <div class="row">
             <!-- Welcome Home Message -->
             <div class="navHide col-sm-8 col-md-7 py-3">
-              <h5>History</h5>
+              <h5>Welcome</h5>
               <p class="text-muted">
-                The initial work of the Demajobs City started in the year 2007
+                Demajobs City’s main objective is to know Christ Jesus and make Him known to all.
+                All the activities of the city will be directed at building a strong platform for
+                Christians to deepen their experience of Christ Jesus.
               </p>
               <img class="img-fluid" src="resources/images/..." alt="Image of Demajobs Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
               <ul class="list-unstyled">
-                <li class="nav-item"><h5><a class="nav-link" href="index.html">Home</a></h5></li>
-                <li class="nav-item active"><h5><a class="nav-link" href="history.html">History<span class="sr-only">(current)</span></a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="about.html">About Us</a></h5></li>
+                <li class="nav-item active"><h5><a class="nav-link" href="index.html">Home</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="history.html">History</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="about.html">About Us<span class="sr-only">(current)</span></a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#!">The Team</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#!">Divisions</a></h5></li>
               </ul>
@@ -62,62 +64,43 @@
           </button>
         </div>
       </nav>
-      <div id="historybanner" class="container">
-        <div class="jumbotron">
-          <div class="row">
-            <div class="col-md-8 pb-4">
+      <!--About -->
+      <div class="container p-5">
+        <div class="row">
+          <div class="col-3">
+            <div class="list-group" id="list-tab" role="tablist">
+              <a class="list-group-item list-group-item-action active" id="list-overview-list" data-toggle="list" href="#list-overview" role="tab" aria-controls="overview"><h4>Overview</h4> </a>
+              <a class="list-group-item list-group-item-action" id="list-mission-list" data-toggle="list" href="#list-mission" role="tab" aria-controls="mission"><h4>Mission</h4> </a>
+              <a class="list-group-item list-group-item-action" id="list-Vision-list" data-toggle="list" href="#list-Vision" role="tab" aria-controls="Vision"><h4>Vision</h4> </a>
+              <a class="list-group-item list-group-item-action" id="list-values-list" data-toggle="list" href="#list-values" role="tab" aria-controls="values"><h4>Core Values</h4> </a>
+              <a class="list-group-item list-group-item-action" id="list-obj-list" data-toggle="list" href="#list-obj" role="tab" aria-controls="mission"><h4>Objectives</h4> </a>
             </div>
-            <div class="col-md-4">
+          </div>
+          <div class="col-9">
+            <div class="tab-content" id="nav-tabContent">
+              <div class="tab-pane fade show active" id="list-overview" role="tabpanel" aria-labelledby="list-overview-list">
+
+              </div>
+              <div class="tab-pane fade" id="list-mission" role="tabpanel" aria-labelledby="list-mission-list">
+
+              </div>
+              <div class="tab-pane fade" id="list-Vision" role="tabpanel" aria-labelledby="list-Vision-list">
+
+              </div>
+              <div class="tab-pane fade" id="list-values" role="tabpanel" aria-labelledby="list-values-list">
+
+              </div>
+              <div class="tab-pane fade" id="list-mission" role="tabpanel" aria-lrabelledby="list-mission-list">
+
+              </div>
+              <div class="tab-pane fade" id="list-obj" role="tabpanel" aria-labelledby="list-obj-list">
+
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- Main Content -->
-      <div class="">
-        <div class="container">
-          <!--Breadcrumb Command -->
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">History</li>
-            </ol>
-          </nav>
-          <!-- Heading -->
-          <div class="heading py-3">
-            <h1>The History</h1>
-            <p class="text-muted"><i class="fas fa-history"></i> Brief History of Demajobs City</p>
-          </div>
-          <!-- Brief History -->
-          <div class="brief pb-5">
-            <h5>
-              The initial work of the Demajobs City started in the year 2007. <br><br>
-              Even without physical structures to show, some pastors and a group
-               of individuals have already been exposed to the vision of the
-               above. A few publications, “The Gap” were made available to these
-                groups of people for them to appreciate the missions,
-                projections and propositions of the Demajobs City. <br><br>
-                The initial responses of the pastors were that the vision is too
-                 big for a place like Ghana; however, they did not doubt the
-                 Demajobs City’s place in the life of the church.
-                  <br>
-                  Their final resolution however was that because the project is
-                   of God, he
-                 himself will nurture his own vision and bring the project to
-                 reality.
-                 <br><br><br>
-                 Once in a while however, and rather genuinely, someone shows
-                 up and declare the project as being too big and also an
-                 impossible mission in terms of its financial commitment. <br>
-                 Though these comments may be from a sincere heart, it is
-                 believed that this project is far less and in fact 'an atom'
-                 compared with what God has done in the past, is doing right
-                 now and will do in the future.  <br><br>
-                 This is what raises our hopes
-                 and faith that the Demajobs City is God’s agenda for today.
-            </h5>
-          </div>
-        </div>
-      </div>
+
       <!-- Footer -->
       <footer>
         <div class="container py-4">
