--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <ul class="list-unstyled">
                 <li class="nav-item active"><h5><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="history.html">History</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#!">About Us</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="about.html">About Us</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#!">The Team</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#!">Divisions</a></h5></li>
               </ul>
@@ -132,7 +132,7 @@
             <div class="col-md-7 pb-4">
               <p class="font-weight-bold display-4">Demajobs City</p>
               <h3 class="lead">To know Christ Jesus and make Him known to all...</h3>
-              <p class="pt-4"><a href="#!"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
+              <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
             </div>
             <div class="col-md-5">
             </div>
@@ -203,7 +203,7 @@
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Featured Links</h5>
               <p><a href="history.html">History</a></p>
-              <p><a href="#!">About Us</a></p>
+              <p><a href="about.html">About Us</a></p>
               <p><a href="#!">Gallery</a></p>
             </div>
             <!-- Social Media Links -->
