--- a/about.html
+++ b/about.html
@@ -67,16 +67,16 @@
       <!--About -->
       <div class="container p-5">
         <div class="row">
-          <div class="col-3">
+          <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist">
-              <a class="list-group-item list-group-item-action active" id="list-overview-list" data-toggle="list" href="#list-overview" role="tab" aria-controls="overview"><h4>Overview</h4> </a>
-              <a class="list-group-item list-group-item-action" id="list-mission-list" data-toggle="list" href="#list-mission" role="tab" aria-controls="mission"><h4>Mission</h4> </a>
-              <a class="list-group-item list-group-item-action" id="list-Vision-list" data-toggle="list" href="#list-Vision" role="tab" aria-controls="Vision"><h4>Vision</h4> </a>
-              <a class="list-group-item list-group-item-action" id="list-values-list" data-toggle="list" href="#list-values" role="tab" aria-controls="values"><h4>Core Values</h4> </a>
-              <a class="list-group-item list-group-item-action" id="list-obj-list" data-toggle="list" href="#list-obj" role="tab" aria-controls="mission"><h4>Objectives</h4> </a>
+              <a class="list-group-item list-group-item-action active" id="list-overview-list" data-toggle="list" href="#list-overview" role="tab" aria-controls="overview">Overview</a>
+              <a class="list-group-item list-group-item-action" id="list-mission-list" data-toggle="list" href="#list-mission" role="tab" aria-controls="mission">Mission</a>
+              <a class="list-group-item list-group-item-action" id="list-Vision-list" data-toggle="list" href="#list-Vision" role="tab" aria-controls="Vision">Vision</a>
+              <a class="list-group-item list-group-item-action" id="list-values-list" data-toggle="list" href="#list-values" role="tab" aria-controls="values">Core Values</a>
+              <a class="list-group-item list-group-item-action" id="list-obj-list" data-toggle="list" href="#list-obj" role="tab" aria-controls="mission">Objectives</a>
             </div>
           </div>
-          <div class="col-9">
+          <div class="col-8">
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="list-overview" role="tabpanel" aria-labelledby="list-overview-list">
 
