--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>Demajobs City</title>
+    <title>About Us</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -35,9 +35,10 @@
             <div class="navHide col-sm-8 col-md-7 py-3">
               <h5>Welcome</h5>
               <p class="text-muted">
-                Demajobs City’s main objective is to know Christ Jesus and make Him known to all.
-                All the activities of the city will be directed at building a strong platform for
-                Christians to deepen their experience of Christ Jesus.
+                Who We Are? <br>
+                What We Are? <br>
+                What We Stand For? <br>
+                Get to know more about Demajobs City
               </p>
               <img class="img-fluid" src="resources/images/..." alt="Image of Demajobs Logo">
             </div>
@@ -71,7 +72,7 @@
             <div class="list-group" id="list-tab" role="tablist">
               <a class="list-group-item list-group-item-action active" id="list-overview-list" data-toggle="list" href="#list-overview" role="tab" aria-controls="overview">Overview</a>
               <a class="list-group-item list-group-item-action" id="list-mission-list" data-toggle="list" href="#list-mission" role="tab" aria-controls="mission">Mission</a>
-              <a class="list-group-item list-group-item-action" id="list-Vision-list" data-toggle="list" href="#list-Vision" role="tab" aria-controls="Vision">Vision</a>
+              <a class="list-group-item list-group-item-action" id="list-vision-list" data-toggle="list" href="#list-vision" role="tab" aria-controls="vision">Vision</a>
               <a class="list-group-item list-group-item-action" id="list-values-list" data-toggle="list" href="#list-values" role="tab" aria-controls="values">Core Values</a>
               <a class="list-group-item list-group-item-action" id="list-obj-list" data-toggle="list" href="#list-obj" role="tab" aria-controls="mission">Objectives</a>
             </div>
@@ -79,22 +80,49 @@
           <div class="col-8">
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="list-overview" role="tabpanel" aria-labelledby="list-overview-list">
-
+                <h4>Overview</h4> <br><br>
+                <p>
+                  Demajobs City’s main objective is to know Christ Jesus and
+                  make Him known to all. All the activities of the city will
+                  be directed at building a strong platform for Christians
+                  to deepen their experience of Christ Jesus. <br><br>
+                  In the quest to fulfilling this objective, this project seeks
+                  to serve as a covering for children, the youth and the elderly.
+                  Through intentional discipleship drive, individuals will be
+                  helped to create strong lasting bonds with God and with the
+                  fellowship of believers, as they bear witness to the saving
+                  power of God.
+                </p>
               </div>
               <div class="tab-pane fade" id="list-mission" role="tabpanel" aria-labelledby="list-mission-list">
-
+                <h4>Mission Statement</h4> <br><br>
+                <p>To train, equip and raise an army for the Lord in this End-time among Christians;
+                  for effectiveness and fervency of prayer in preparing a solid spiritual
+                  foundation for successful evangelism.</p>
               </div>
-              <div class="tab-pane fade" id="list-Vision" role="tabpanel" aria-labelledby="list-Vision-list">
-
+              <div class="tab-pane fade" id="list-vision" role="tabpanel" aria-labelledby="list-vision-list">
+                <h4>Vision Statement</h4> <br><br>
+                <p>To give Christians an experience of true and total worship life.</p>
               </div>
               <div class="tab-pane fade" id="list-values" role="tabpanel" aria-labelledby="list-values-list">
-
-              </div>
-              <div class="tab-pane fade" id="list-mission" role="tabpanel" aria-lrabelledby="list-mission-list">
-
+                <h4>Core values</h4> <br><br>
+                <ol>
+                  <li>Prayer</li>
+                  <li>The word of God (evangelism)</li>
+                  <li>Evangelism</li>
+                  <li>Empathy</li>
+                  <li>Respect</li>
+                </ol>
               </div>
               <div class="tab-pane fade" id="list-obj" role="tabpanel" aria-labelledby="list-obj-list">
-
+                <h4>Objectives</h4> <br><br>
+                <ol>
+                  <li>To create an atmosphere for the conduct of prayer</li>
+                  <li>There will be no Age discrimination</li>
+                  <li>There will be no Gender discrimination</li>
+                  <li>There will be no Disability discrimination</li>
+                  <li>There will be no Racial discrimination</li>
+                </ol>
               </div>
             </div>
           </div>
