--- a/about.html
+++ b/about.html
@@ -107,21 +107,21 @@
               <div class="tab-pane fade" id="list-values" role="tabpanel" aria-labelledby="list-values-list">
                 <h4>Core values</h4> <br><br>
                 <ol>
-                  <li>Prayer</li>
-                  <li>The word of God (evangelism)</li>
-                  <li>Evangelism</li>
-                  <li>Empathy</li>
-                  <li>Respect</li>
+                  <li>Prayer</li> <br>
+                  <li>The word of God (evangelism)</li> <br>
+                  <li>Evangelism</li> <br>
+                  <li>Empathy</li> <br>
+                  <li>Respect</li> <br>
                 </ol>
               </div>
               <div class="tab-pane fade" id="list-obj" role="tabpanel" aria-labelledby="list-obj-list">
                 <h4>Objectives</h4> <br><br>
                 <ol>
-                  <li>To create an atmosphere for the conduct of prayer</li>
-                  <li>There will be no Age discrimination</li>
-                  <li>There will be no Gender discrimination</li>
-                  <li>There will be no Disability discrimination</li>
-                  <li>There will be no Racial discrimination</li>
+                  <li>To create an atmosphere for the conduct of prayer</li> <br>
+                  <li>There will be no Age discrimination</li> <br>
+                  <li>There will be no Gender discrimination</li> <br>
+                  <li>There will be no Disability discrimination</li> <br>
+                  <li>There will be no Racial discrimination</li> <br>
                 </ol>
               </div>
             </div>
