--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
               <ul class="list-unstyled">
-                <li class="nav-item active"><h5><a class="nav-link" href="index.html">Home</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="index.html">Home</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="history.html">History</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="about.html">About Us<span class="sr-only">(current)</span></a></h5></li>
+                <li class="nav-item active"><h5><a class="nav-link" href="about.html">About Us<span class="sr-only">(current)</span></a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#!">The Team</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="#!">Divisions</a></h5></li>
               </ul>
