--- a/about.html
+++ b/about.html
@@ -81,6 +81,7 @@
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="list-overview" role="tabpanel" aria-labelledby="list-overview-list">
                 <h4>Overview</h4> <br><br>
+                <img class="img-fluid" src="resources/images/overview.jpg" alt="overview img">
                 <p>
                   Demajobs City’s main objective is to know Christ Jesus and
                   make Him known to all. All the activities of the city will
@@ -96,16 +97,19 @@
               </div>
               <div class="tab-pane fade" id="list-mission" role="tabpanel" aria-labelledby="list-mission-list">
                 <h4>Mission Statement</h4> <br><br>
+                <img class="img-fluid" src="resources/images/mission.jpg" alt="mission img">
                 <p>To train, equip and raise an army for the Lord in this End-time among Christians;
                   for effectiveness and fervency of prayer in preparing a solid spiritual
                   foundation for successful evangelism.</p>
               </div>
               <div class="tab-pane fade" id="list-vision" role="tabpanel" aria-labelledby="list-vision-list">
                 <h4>Vision Statement</h4> <br><br>
+                <img class="img-fluid" src="resources/images/vision.jpg" alt="vision img">
                 <p>To give Christians an experience of true and total worship life.</p>
               </div>
               <div class="tab-pane fade" id="list-values" role="tabpanel" aria-labelledby="list-values-list">
                 <h4>Core values</h4> <br><br>
+                <img class="img-fluid" src="resources/images/values.jpg" alt="values img">
                 <ol>
                   <li>Prayer</li> <br>
                   <li>The word of God (evangelism)</li> <br>
@@ -116,6 +120,7 @@
               </div>
               <div class="tab-pane fade" id="list-obj" role="tabpanel" aria-labelledby="list-obj-list">
                 <h4>Objectives</h4> <br><br>
+                <img class="img-fluid" src="resources/images/obj.jpg" alt="obj img">
                 <ol>
                   <li>To create an atmosphere for the conduct of prayer</li> <br>
                   <li>There will be no Age discrimination</li> <br>
