--- a/about.html
+++ b/about.html
@@ -80,13 +80,14 @@
           <div class="col-8">
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="list-overview" role="tabpanel" aria-labelledby="list-overview-list">
-                <h4>Overview</h4> <br><br>
-                <img class="img-fluid" src="resources/images/overview.jpg" alt="overview img">
+                <h4>Overview</h4> <br>
+                <img class="img-fluid" src="resources/images/overview.jpg" alt="overview img"> <br>
                 <p>
                   Demajobs City’s main objective is to know Christ Jesus and
                   make Him known to all. All the activities of the city will
                   be directed at building a strong platform for Christians
-                  to deepen their experience of Christ Jesus. <br><br>
+                  to deepen their experience of Christ Jesus.
+                  <br><br>
                   In the quest to fulfilling this objective, this project seeks
                   to serve as a covering for children, the youth and the elderly.
                   Through intentional discipleship drive, individuals will be
@@ -96,20 +97,20 @@
                 </p>
               </div>
               <div class="tab-pane fade" id="list-mission" role="tabpanel" aria-labelledby="list-mission-list">
-                <h4>Mission Statement</h4> <br><br>
-                <img class="img-fluid" src="resources/images/mission.jpg" alt="mission img">
+                <h4>Mission Statement</h4> <br>
+                <img class="img-fluid" src="resources/images/mission.jpg" alt="mission img"> <br>
                 <p>To train, equip and raise an army for the Lord in this End-time among Christians;
                   for effectiveness and fervency of prayer in preparing a solid spiritual
                   foundation for successful evangelism.</p>
               </div>
               <div class="tab-pane fade" id="list-vision" role="tabpanel" aria-labelledby="list-vision-list">
-                <h4>Vision Statement</h4> <br><br>
-                <img class="img-fluid" src="resources/images/vision.jpg" alt="vision img">
+                <h4>Vision Statement</h4> <br>
+                <img class="img-fluid" src="resources/images/vision.jpg" alt="vision img"> <br>
                 <p>To give Christians an experience of true and total worship life.</p>
               </div>
               <div class="tab-pane fade" id="list-values" role="tabpanel" aria-labelledby="list-values-list">
-                <h4>Core values</h4> <br><br>
-                <img class="img-fluid" src="resources/images/values.jpg" alt="values img">
+                <h4>Core values</h4> <br>
+                <img class="img-fluid" src="resources/images/values.jpg" alt="values img"> <br>
                 <ol>
                   <li>Prayer</li> <br>
                   <li>The word of God (evangelism)</li> <br>
@@ -119,8 +120,8 @@
                 </ol>
               </div>
               <div class="tab-pane fade" id="list-obj" role="tabpanel" aria-labelledby="list-obj-list">
-                <h4>Objectives</h4> <br><br>
-                <img class="img-fluid" src="resources/images/obj.jpg" alt="obj img">
+                <h4>Objectives</h4> <br>
+                <img class="img-fluid" src="resources/images/obj.jpg" alt="obj img"> <br>
                 <ol>
                   <li>To create an atmosphere for the conduct of prayer</li> <br>
                   <li>There will be no Age discrimination</li> <br>
