--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="list-overview" role="tabpanel" aria-labelledby="list-overview-list">
                 <h4>Overview</h4> <br>
-                <img class="img-fluid" src="resources/images/overview.jpg" alt="overview img"> <br>
-                <p>
+                <img class="img-fluid" src="resources/images/overview.jpg" alt="overview img">
+                <p class="p-4">
                   Demajobs City’s main objective is to know Christ Jesus and
                   make Him known to all. All the activities of the city will
                   be directed at building a strong platform for Christians
@@ -99,19 +99,19 @@
               <div class="tab-pane fade" id="list-mission" role="tabpanel" aria-labelledby="list-mission-list">
                 <h4>Mission Statement</h4> <br>
                 <img class="img-fluid" src="resources/images/mission.jpg" alt="mission img"> <br>
-                <p>To train, equip and raise an army for the Lord in this End-time among Christians;
+                <p class="p-4">To train, equip and raise an army for the Lord in this End-time among Christians;
                   for effectiveness and fervency of prayer in preparing a solid spiritual
                   foundation for successful evangelism.</p>
               </div>
               <div class="tab-pane fade" id="list-vision" role="tabpanel" aria-labelledby="list-vision-list">
                 <h4>Vision Statement</h4> <br>
                 <img class="img-fluid" src="resources/images/vision.jpg" alt="vision img"> <br>
-                <p>To give Christians an experience of true and total worship life.</p>
+                <p class="p-4">To give Christians an experience of true and total worship life.</p>
               </div>
               <div class="tab-pane fade" id="list-values" role="tabpanel" aria-labelledby="list-values-list">
                 <h4>Core values</h4> <br>
                 <img class="img-fluid" src="resources/images/values.jpg" alt="values img"> <br>
-                <ol>
+                <ol class="p-4">
                   <li>Prayer</li> <br>
                   <li>The word of God (evangelism)</li> <br>
                   <li>Evangelism</li> <br>
@@ -122,7 +122,7 @@
               <div class="tab-pane fade" id="list-obj" role="tabpanel" aria-labelledby="list-obj-list">
                 <h4>Objectives</h4> <br>
                 <img class="img-fluid" src="resources/images/obj.jpg" alt="obj img"> <br>
-                <ol>
+                <ol class="p-4">
                   <li>To create an atmosphere for the conduct of prayer</li> <br>
                   <li>There will be no Age discrimination</li> <br>
                   <li>There will be no Gender discrimination</li> <br>
