--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
           <div class="row">
             <!-- Welcome Home Message -->
             <div class="navHide col-sm-8 col-md-7 py-3">
-              <h5>Welcome</h5>
+              <h5>About Demajobs City</h5>
               <p class="text-muted">
                 Who We Are? <br>
                 What We Are? <br>
