--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 All the activities of the city will be directed at building a strong platform for
                 Christians to deepen their experience of Christ Jesus.
               </p>
-              <img class="img-fluid" src="resources/images/..." alt="Image of Demajobs Logo">
+              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Demajobs Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -57,7 +57,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/..." width="200" alt="Image of Demajobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Demajobs Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
